# fuel-agent

./: .gitignore  .gitreview  MAINTAINERS  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cloud-init-templates/: boothook_centos.jinja2  boothook_fuel_6.1_centos.jinja2  boothook_fuel_6.1_ubuntu.jinja2  boothook_fuel_7.0_centos.jinja2  boothook_fuel_7.0_ubuntu.jinja2  boothook_fuel_8.0_ubuntu.jinja2  boothook_fuel_9.0_ubuntu.jinja2  boothook_ubuntu.jinja2  cloud_config_centos.jinja2  cloud_config_fuel_9.0_ubuntu.jinja2  cloud_config_ubuntu.jinja2  (+1 more)
contrib/fuel_bootstrap/fuel_bootstrap_cli/: AUTHORS  requirements.txt  setup.cfg  setup.py
contrib/fuel_bootstrap/fuel_bootstrap_cli/fuel_bootstrap/: consts.py  errors.py  main.py  settings.py  settings.yaml.sample
contrib/fuel_bootstrap/fuel_bootstrap_cli/fuel_bootstrap/commands/: activate.py  base.py  build.py  delete.py  import.py
contrib/fuel_bootstrap/fuel_bootstrap_cli/fuel_bootstrap/objects/: master_node_settings.py
contrib/fuel_bootstrap/fuel_bootstrap_cli/fuel_bootstrap/tests/: base.py  conftest.py  test_activate_command.py  test_app.py  test_build_command.py  test_delete_command.py  test_import_command.py  test_list_command.py  test_requirements.py  test_utils_bootstrap_image.py  test_utils_data.py
contrib/fuel_bootstrap/fuel_bootstrap_cli/fuel_bootstrap/utils/: bootstrap_image.py  data.py  notifier.py
contrib/ironic/ironic-fa-deploy/: README.rst  requirements.txt  setup.cfg  setup.py
contrib/ironic/ironic-fa-deploy/ironic_fa_deploy/: fuel.py
contrib/ironic/ironic-fa-deploy/ironic_fa_deploy/common/: exception.py
contrib/ironic/ironic-fa-deploy/ironic_fa_deploy/modules/: fuel_agent.py  fuel_config.template  lib_virt.py
(+87 files in other folders)
