[metadata]
name = fuel-bootstrap
version = 0.0.2
summary = Command line Fuel bootstrap manager
author = Mirantis Inc.
author-email = product@mirantis.com
home-page = http://mirantis.com
description-file =
    README.rst
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    fuel_bootstrap

[entry_points]
console_scripts =
    fuel-bootstrap=fuel_bootstrap.main:main

fuel_bootstrap =
    build=fuel_bootstrap.commands.build:BuildCommand
    list=fuel_bootstrap.commands.list:ListCommand
    import=fuel_bootstrap.commands.import:ImportCommand
    activate=fuel_bootstrap.commands.activate:ActivateCommand
    delete=fuel_bootstrap.commands.delete:DeleteCommand
