[metadata]
name = ironic-fa-deploy
version = 11.0.0
author = Mirantis
summary = Fuel Agent deploy driver for Ironic
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python

[files]
packages =
    ironic_fa_deploy

extra_files =
    ironic_fa_deploy/modules/fuel_config.template


[entry_points]
ironic.drivers =
    fuel_ipmitool = ironic_fa_deploy.fuel:FuelAndIPMIToolDriver
    fuel_libvirt = ironic_fa_deploy.fuel:FuelAndLibvirtDriver
    fuel_ssh = ironic_fa_deploy.fuel:FuelAndSSHDriver
